Correção de bugs CSS/Funcionalidade da Tela Quizz

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </main>
     </div>
 
-    <div class="info-quizz active">
+    <div class="info-quizz">
         <header>
             <h1>BuzzQuizz</h1>
         </header>
